meta info added in watchlist